[package]
name = "offer-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.29.0", default-features = false, features = ["secp-recovery"] }
lightning = { path = "../rust-lightning/lightning", version = "0.0.116-alpha" }
#lightning = { git = "https://github.com/jkczyz/rust-lightning", rev = "9c2a3d090b618b98f2cd89c0193c4866331375ea", features = ["max_level_trace"] }
rand = { version = "0.8.5" }
